--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   }
 }
